# Exam-Analyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TRANSLATE.md  backfill_cefr.py  backfill_embedding.py  backfill_saikyou.py  backfill_text.py  compare_search.py  fly.toml  pyproject.toml  rebuild_db.py  requirements.txt
.claude/: settings.json
app/: auth.py  classifier.py  config.py  db.py  embedding.py  gemini_convert.py  llm_clients.py  main.py  models.py  parser.py  prompts.py  search.py  translate_prompts.py  translate_service.py  vocab_analyzer.py  xray_tokenizer.py
app/routers/: dashboard.py  export.py  passages.py  search.py  translate.py  universities.py  upload.py  xray.py
app/wordlists/: cefr_j.csv  junior_high.txt  leap.txt  ngsl.txt  saikyou.txt  system_vocab_5.txt  target1900.txt  teppeki.txt
static/: style.css
templates/: base.html  index.html  login.html  manage.html  translate.html
templates/partials/: dashboard.html  heatmap.html  job_status.html  question_format_practice.html  question_matrix.html  record_row.html  records_table.html  review_list.html  similar_results.html  university_profile.html  university_settings.html  upload_progress.html
tests/: test_db.py  test_parser.py  test_translate.py  test_xray_api.py  test_xray_tokenizer.py
tools/: backfill_cefr.py  backfill_embedding.py  backfill_saikyou.py  backfill_saikyou_words.py  backfill_text.py  compare_search.py
