[project]
name = "exam-analyzer"
version = "0.1.0"
description = "入試問題分析ツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "anthropic>=0.39.0",
    "pyyaml>=6.0.2",
    "bcrypt>=4.2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "nltk>=3.9.0",
    "voyageai>=0.3.7",
    "google-genai>=1.0.0",
    "PyMuPDF>=1.25.0",
    "yossy-portal-lib",
]

[tool.uv.sources]
yossy-portal-lib = { path = "../yossy-portal/lib" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
